fixed overflow issue on on mobile 2nd try

--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .link-container {
